Bug 334673 - Wrong widget selection in resize corner
Summary: Wrong widget selection in resize corner
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.5
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-12 18:59 UTC by Ralf Habacker
Modified: 2014-05-12 19:03 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.12.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-05-12 18:59:51 UTC
An association widget connected to the resize corner of a class widget get incorrect focus when clicking on the class widget resize corner. 


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. add two classes to the class diagram
3. connect both class widgets
4. move one class widget so that the association ends on the resize corner of a class widget
5. click on the last mentioned class widget resize corner
Actual Results:  
The association widget gets selected incorrectly

Expected Results:  
The class widget should be selected instead of the association widget
Comment 1 Ralf Habacker 2014-05-12 19:00:42 UTC
Git commit f43604bc64e2c172114561b350cdf76153337655 by Ralf Habacker.
Committed on 12/05/2014 at 18:46.
Pushed by habacker into branch 'master'.

Limit association widget selection area to association outline.

This fixes a bug wrongly selecting an association widget ending on
a class widget resize corner after clicking on the class widget
resize corner.

M  +1    -0    umbrello/widgets/associationline.cpp
M  +1    -2    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/f43604bc64e2c172114561b350cdf76153337655
Comment 2 Ralf Habacker 2014-05-12 19:01:55 UTC
Git commit 57b797d48a781777528164268dd779ef36a9318d by Ralf Habacker.
Committed on 12/05/2014 at 18:46.
Pushed by habacker into branch 'KDE/4.13'.

Limit association widget selection area to association outline.

This fixes a bug wrongly selecting an association widget ending on
a class widget resize corner after clicking on the class widget
resize corner.
FIXED-IN:4.13.1
(cherry picked from commit f43604bc64e2c172114561b350cdf76153337655)

M  +1    -0    umbrello/widgets/associationline.cpp
M  +1    -2    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/57b797d48a781777528164268dd779ef36a9318d
Comment 3 Ralf Habacker 2014-05-12 19:03:02 UTC
Git commit 2f9ab281ec3a76e5195817b72594e7c92e35aafb by Ralf Habacker.
Committed on 12/05/2014 at 18:46.
Pushed by habacker into branch 'KDE/4.12'.

Limit association widget selection area to association outline.

This fixes a bug wrongly selecting an association widget ending on
a class widget resize corner after clicking on the class widget
resize corner.
FIXED-IN:4.12.5
(cherry picked from commit f43604bc64e2c172114561b350cdf76153337655)

M  +1    -0    umbrello/widgets/associationline.cpp
M  +1    -2    umbrello/widgets/associationwidget.cpp

http://commits.kde.org/umbrello/2f9ab281ec3a76e5195817b72594e7c92e35aafb