Limit association widget selection area to association outline.

This fixes a bug wrongly selecting an association widget ending on
a class widget resize corner after clicking on the class widget
resize corner.

BUG:334673
FIXED-IN:4.12.5
(cherry picked from commit f43604bc64e2c172114561b350cdf76153337655)